logs/isconf.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/isconf'...
Compiling './lib/python3.5/site-packages/isconf/Cache.py'...
***   File "./lib/python3.5/site-packages/isconf/Cache.py", line 82
    os.makedirs(d,0700)
                     ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/isconf/GPG.py'...
***   File "./lib/python3.5/site-packages/isconf/GPG.py", line 79
    os.makedirs(self.gnupghome,0700)
                                  ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/isconf/ISFS.py'...
***   File "./lib/python3.5/site-packages/isconf/ISFS.py", line 327
    os.makedirs(dir,0700)
                       ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/isconf/ISconf.py'...
***   File "./lib/python3.5/site-packages/isconf/ISconf.py", line 397
    except Error822, e:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/isconf/Kernel.py'...
***   File "./lib/python3.5/site-packages/isconf/Kernel.py", line 406
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/isconf/Main.py'...
***   File "./lib/python3.5/site-packages/isconf/Main.py", line 97
    print release()
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/isconf/Server.py'...
***   File "./lib/python3.5/site-packages/isconf/Server.py", line 36
    os.makedirs(self.confdir,0700)
                                ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/isconf/Socket.py'...
***   File "./lib/python3.5/site-packages/isconf/Socket.py", line 25
    except socket.error, (error, strerror):
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/isconf/component.py'...
***   File "./lib/python3.5/site-packages/isconf/component.py", line 149
    print x, "from foo"
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/isconf/fbp822.py'...
***   File "./lib/python3.5/site-packages/isconf/fbp822.py", line 156
    except Error822, e:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/isconf-4.2.8.253.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
